@startuml
!include Style.puml

skinparam linetype ortho
skinparam nodesep 100
hide empty members

class CardsList CARDS_COLOR_PRIMARY
class \n\nCard\n\n CARDS_COLOR_PRIMARY

class CardFieldChange {
    - previous: String
    - current: String
}

CardsList -right--> "         1 "/"history" CardsHistory
CardsHistory -right-> "          0..*"/"historyList" \n\nCardHistoryEntry\n\n


\n\nCardHistoryEntry\n\n -right--> "0..1      "/"current" \n\nCard\n\n : ""
\n\nCardHistoryEntry\n\n -right--> "0..1      "/previous \n\nCard\n\n : ""

\n\nCardHistoryEntry\n\n --> "1  "/"  cardHistoryType" CardHistoryType
\n\nCardHistoryEntry\n\n ..> CardFieldChange

enum CardHistoryType <<enumeration>> {
    ADDED
    REMOVED
    MODIFIED
    ENTIRE
}


}
@enduml